--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-	"name": "chatter-box",
+	"name": "twin-talk",
 	"version": "1.0.0",
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"server": "nodemon backend/server.js",
-		"start": "node backend/server.js",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+	  "server": "nodemon backend/server.js",
+	  "start": "node backend/server.js",
+	  "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+	  "dev": "concurrently \"npm run server\" \"npm run dev --prefix frontend\""
 	},
 	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"bcryptjs": "^2.4.3",
-		"cookie-parser": "^1.4.6",
-		"dotenv": "^16.4.1",
-		"express": "^4.18.2",
-		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.1.1",
-		"socket.io": "^4.7.4"
+	  "bcryptjs": "^2.4.3",
+	  "cookie-parser": "^1.4.6",
+	  "dotenv": "^16.4.1",
+	  "express": "^4.18.2",
+	  "jsonwebtoken": "^9.0.2",
+	  "mongoose": "^8.1.1",
+	  "socket.io": "^4.7.4"
 	},
 	"devDependencies": {
-		"nodemon": "^3.0.3"
+	  "concurrently": "^7.6.0",
+	  "nodemon": "^3.0.3"
 	}
-}
+  }
+  
